# ubuntu-security-guide

./: .gitignore  README.build  README.md  dev-requirements.txt  pyproject.toml  setup.cfg
.github/workflows/: tiobe.yaml  unit_e2e_all_platforms.yaml
conf/: usg.conf
conf/logrotate.d/: usg
debian/: changelog  control  copyright  not-installed  rules  usg-benchmarks.dirs  usg-benchmarks.install  usg-benchmarks.manpages  usg-benchmarks.postinst  usg-benchmarks.prerm  usg.bash-completion  usg.install  usg.manpages
debian/tests/: control  usg-cli-e2e  usg-version
doc/: README  README.md
doc/man7/: usg-cis.md  usg-disa-stig.md  usg-rules.md  usg-variables.md
doc/man8/: usg.md
etc/: usg.conf
sbin/: usg
src/cli/: usg
src/legacy/: usg
src/usg/: __init__.py  __main__.py  backends.py  cli.py  config.py  constants.py  exceptions.py  models.py  results.py  usg.py  utils.py  version.py
tailoring/: cis_level1_server-tailoring.xml  cis_level1_workstation-tailoring.xml  cis_level2_server-tailoring.xml  cis_level2_workstation-tailoring.xml  stig-tailoring.xml
templates/tailoring/: cis_level1_server-tailoring.xml  (+5 more)
tests/: conftest.py  test_backends.py  test_benchmark.py  test_cli.py  test_config.py  test_models.py  test_results.py  test_tailoring.py  test_usg.py  test_utils.py
tools/: README.md  build.py  build_cac_usg_deb.sh  build_config.ini  cac_tools.py  create_rule_and_variable_doc.py  extract_oval.py  extract_rule_yml.py  extract_ruleset.py  generate_tailoring_file.py  pre_package_build.sh  process_benchmarks.py  run_container.sh  run_tests.sh
(+107 files in other folders)
